# Detectron

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  GETTING_STARTED.md  Games  ILSRVC_to_COCO.ipynb  INSTALL.md  MODEL_ZOO.md  Makefile  Merging_datasets.ipynb  NOTICE  PYTHON2_TO_PYTHON3_NOTES.md  README.md  ROS_Instructions.md  Visualization Voc.ipynb  instalation_new_device.md  old-README.md  package.xml  python2_to_python3_conversion_automated.sh  requirements.txt  setup.py  tests_to_pass.sh
.github/: issue_template.md  pull_request_template.md
cmake/: Dependencies.cmake  Summary.cmake
cmake/legacy/: Cuda.cmake  Dependencies.cmake  Summary.cmake  Utils.cmake  legacymake.cmake
configs/04_2018_gn_baselines/: e2e_mask_rcnn_R-101-FPN_2x_gn.yaml  e2e_mask_rcnn_R-101-FPN_3x_gn.yaml  e2e_mask_rcnn_R-50-FPN_2x_gn.yaml  e2e_mask_rcnn_R-50-FPN_3x_gn.yaml  mask_rcnn_R-50-FPN_1x_gn.yaml  scratch_e2e_mask_rcnn_R-101-FPN_3x_gn.yaml  scratch_e2e_mask_rcnn_R-50-FPN_3x_gn.yaml
configs/12_2017_baselines/: e2e_faster_rcnn_R-101-FPN_1x.yaml  e2e_faster_rcnn_R-101-FPN_2x.yaml  e2e_faster_rcnn_R-50-C4_1x.yaml  e2e_faster_rcnn_R-50-C4_2x.yaml  e2e_faster_rcnn_R-50-FPN_1x.yaml  e2e_faster_rcnn_R-50-FPN_2x.yaml  e2e_faster_rcnn_X-101-32x8d-FPN_1x.yaml  e2e_faster_rcnn_X-101-32x8d-FPN_2x.yaml  e2e_faster_rcnn_X-101-64x4d-FPN_1x.yaml  e2e_faster_rcnn_X-101-64x4d-FPN_2x.yaml  e2e_keypoint_rcnn_R-101-FPN_1x.yaml  e2e_keypoint_rcnn_R-101-FPN_s1x.yaml  e2e_keypoint_rcnn_R-50-FPN_1x.yaml  e2e_keypoint_rcnn_R-50-FPN_s1x.yaml  e2e_keypoint_rcnn_X-101-32x8d-FPN_1x.yaml  e2e_keypoint_rcnn_X-101-32x8d-FPN_s1x.yaml  e2e_keypoint_rcnn_X-101-64x4d-FPN_1x.yaml  e2e_keypoint_rcnn_X-101-64x4d-FPN_s1x.yaml  e2e_mask_rcnn_R-101-FPN_1x.yaml  e2e_mask_rcnn_R-101-FPN_2x.yaml  e2e_mask_rcnn_R-50-C4_1x.yaml  e2e_mask_rcnn_R-50-C4_2x.yaml  e2e_mask_rcnn_R-50-FPN_1x.yaml  e2e_mask_rcnn_R-50-FPN_2x.yaml  e2e_mask_rcnn_X-101-32x8d-FPN_1x.yaml  e2e_mask_rcnn_X-101-32x8d-FPN_2x.yaml  e2e_mask_rcnn_X-101-64x4d-FPN_1x.yaml  e2e_mask_rcnn_X-101-64x4d-FPN_2x.yaml  e2e_mask_rcnn_X-152-32x8d-FPN-IN5k_1.44x.yaml  fast_rcnn_R-101-FPN_1x.yaml  fast_rcnn_R-101-FPN_2x.yaml  fast_rcnn_R-50-C4_1x.yaml  fast_rcnn_R-50-C4_2x.yaml  fast_rcnn_R-50-FPN_1x.yaml  fast_rcnn_R-50-FPN_2x.yaml  fast_rcnn_X-101-32x8d-FPN_1x.yaml  fast_rcnn_X-101-32x8d-FPN_2x.yaml  fast_rcnn_X-101-64x4d-FPN_1x.yaml  fast_rcnn_X-101-64x4d-FPN_2x.yaml  keypoint_rcnn_R-101-FPN_1x.yaml  (+34 more)
configs/getting_started/: e2e_mask_rcnn_R-50-C4_1x.yaml  e2e_mask_rcnn_R-50-C4_1x_VOC_COCO.yaml  e2e_mask_rcnn_R-50-FPN_2x_COCO.yaml  e2e_mask_rcnn_R-50-FPN_2x_COCOVOC.yaml  e2e_mask_rcnn_R-50-FPN_2x_COCO_VOC.yaml  e2e_mask_rcnn_R-50-FPN_2x_VOC.yaml  tutorial_1gpu_e2e_faster_rcnn_R-50-FPN.yaml  tutorial_2gpu_e2e_faster_rcnn_R-50-FPN.yaml  tutorial_4gpu_e2e_faster_rcnn_R-50-FPN.yaml  tutorial_8gpu_e2e_faster_rcnn_R-50-FPN.yaml
configs/test_cls/: classification_R-50-FPN_1x.yaml  classification_ResNet-50.yaml  fast_rcnn_R-50-FPN_1x.yaml
configs/test_time_aug/: e2e_mask_rcnn_R-50-FPN_2x.yaml  keypoint_rcnn_R-50-FPN_1x.yaml
demo/: NOTICE
detectron/core/: config.py  rpn_generator.py  test.py  test_engine.py  test_retinanet.py
detectron/datasets/: cityscapes_json_dataset_evaluator.py  coco_to_cityscapes_id.py  dataset_catalog.py  dummy_datasets.py  json_dataset.py  json_dataset_evaluator.py  roidb.py  task_evaluation.py  voc_dataset_evaluator.py  voc_eval.py
detectron/modeling/: FPN.py  ResNet.py  VGG16.py  VGG_CNN_M_1024.py  __init__.py  detector.py  fast_rcnn_heads.py  generate_anchors.py  keypoint_rcnn_heads.py  mask_rcnn_heads.py  model_builder.py  optimizer.py  retinanet_heads.py  rfcn_heads.py  rpn_heads.py
detectron/ops/: collect_and_distribute_fpn_rpn_proposals.py  generate_proposal_labels.py  generate_proposals.py  zero_even_op.cc  zero_even_op.cu
detectron/roi_data/: data_utils.py  fast_rcnn.py  keypoint_rcnn.py  loader.py  mask_rcnn.py  minibatch.py  retinanet.py  rpn.py
detectron/tests/: data_loader_benchmark.py  test_batch_permutation_op.py  test_cfg.py  test_loader.py  test_restore_checkpoint.py  test_smooth_l1_loss_op.py  test_spatial_narrow_as_op.py  test_zero_even_op.py
detectron/utils/: blob.py  boxes.py  c2.py  collections.py  coordinator.py  cython_bbox.pyx  env.py  image.py  io.py  keypoints.py  logging.py  lr_policy.py  model_convert_utils.py  net.py  segms.py  subprocess.py  timer.py  train.py  training_stats.py  vis.py
docker/: Dockerfile  README.md
experiments/: _init_paths.py  demo.txt  e2e_faster_rcnn_resnet-50-FPN_pascal2007.yaml  e2e_faster_rcnn_vgg16_pascal2007.yaml  faster-rcnn-vgg16.ipynb  net2json.ipynb  test.yaml
lib/: CMakeLists.txt  Makefile  setup.py  test_net.py
lib/cmake/: Cuda.cmake  Summary.cmake
lib/core/: config.py  rpn_generator.py  test.py  test_engine.py  test_retinanet.py
lib/datasets/: dataset_catalog.py  dummy_datasets.py  json_dataset.py  roidb.py  task_evaluation.py
lib/modeling/: FPN.py  ResNet.py  VGG16.py  VGG_CNN_M_1024.py  classification_heads.py  detector.py  fast_rcnn_heads.py  keypoint_rcnn_heads.py  mask_rcnn_heads.py  model_builder.py  name_compat.py  optimizer.py  retinanet_heads.py  rfcn_heads.py  rpn_heads.py
lib/ops/: generate_proposal_labels.py  generate_proposals.py  zero_even_op.cc  zero_even_op.h
lib/roi_data/: classification.py  data_utils.py  fast_rcnn.py  keypoint_rcnn.py  loader.py  mask_rcnn.py  minibatch.py  (+1 more)
notebooks/: detectron(google_colab).ipynb
tests/: data_loader_benchmark.py  test_batch_permutation_op.py  test_bbox_transform.py  test_cfg.py  test_loader.py  test_restore_checkpoint.py  test_smooth_l1_loss_op.py  test_spatial_narrow_as_op.py  test_zero_even_op.py
tools/: convert_cifar_to_coco.py  convert_cityscapes_to_coco.py  convert_coco_model_to_cityscapes.py  convert_pkl_to_pb.py  convert_selective_search.py  convert_voc_to_coco.py  generate_testdev_from_test.py  infer.py  infer_cls.py  infer_segment.py  infer_simple.py  infer_simple_video.py  infer_video.py  net_vis.py  pickle_caffe_blobs.py  reval.py  show_coco.py  test_net.py  train_net.py  visualize_results.py
(+30 files in other folders)
